updated backend with updated requiremnts